[tool.poetry]
name = "anomaly-sequences-api"
version = "0.1.0"
description = "API to manage anomaly query sequences based on pgaudit logs"
authors = ["Mateus Andrade <mateusandrade080@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
fastapi = ">=0.63.0"
prettyconf = ">=2.2.1"
SQLAlchemy = ">=1.3.23"
uvicorn = ">=0.13.4"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
black = ">=20.8b1"
isort = ">=5.7.0"
flake8 = ">=3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
